feat: list notes
